# paper-revise

./: .editorconfig  .gitignore  CLAUDE.md  CONTRIBUTING.md  EXPERIMENT_GUIDE.md  LICENSE  Makefile  README.md  REORGANIZATION_SUMMARY.md  REVISED_EXPERIMENT_PLAN.md  draft-paper.md  generate_hybrid_experiments.py  memxlnet-diagrams.md  pyproject.toml  test_gmm_device_fix.py  test_rbs_fix.py  test_rbs_loss_fix.py
.github/: copilot-instructions.md
docs/: MEMORY_EFFICIENCY_GUIDE.md  PLANNED_FEATURES.md  README.md  prd.md
docs/api/: API_REFERENCE.md  ENHANCED_MA_XLNET_API_REFERENCE.md  memxlnet_qa.md
docs/architecture/: checklist-results-report.md  coding-standards.md  component-architecture.md  data-models-and-schema-changes.md  enhancement-scope-and-integration-strategy.md  external-apis.md  index.md  infrastructure-and-deployment-integration.md  introduction.md  next-steps.md  rbs-qa-integration-strategy.md  security-integration.md  source-tree.md  tech-stack.md  testing-strategy.md
docs/guides/: CHUNKED_DATASETS_GUIDE.md  ENHANCED_MA_XLNET_QUICK_REFERENCE.md  ENHANCED_MA_XLNET_USAGE_GUIDE.md  GMM_XLNET_GUIDE.md  MEMORY_TOKENS_GUIDE.md  STREAMING_GUIDE.md  TESTING_VALIDATION_GUIDE.md  USAGE_EXAMPLES.md
docs/stories/: 1.1.core-gmm-memory-expert-infrastructure.md  1.10.gmm-documentation-usage-guide.md  1.11.gmm-configuration-bug-fix-validation.md  1.12.gmm-memory-initialization-bug-fix.md  1.13.gmm-trainer-keyerror-fix.md  (+16 more)
examples/: README.md  analyze_gmm_experts.py  analyze_memory_attention.py  evaluate_gmm_model.py  multihop_ma_xlnet.py  train_with_differentiable_memory.py  train_with_gmm_memory.py  validate_answer_spans.py
notebooks/: data_processing-new.ipynb  data_processing.ipynb  debug_phase_2.ipynb  memxlnet_qa.ipynb  upload_to_huggingface.ipynb
results/: README.md
scripts/: analyze_answer_coverage.py  compare_memory_implementations.py  debug_predictions.py  evaluate.py  evaluate_cls_fix.py  evaluate_rbs_model.py  inspect_chunks.py  inspect_preprocessed_data.py  investigate_training_issue.py  phase2_train.py  preprocess_and_upload_to_hub.py  preprocess_datasets_chunked.py  run_all_experiments.sh  test_with_samples.py  train.py  train_comparison_full.py  train_memxlnet_squad.py  train_rbs_hybrid.py  upload_all_checkpoints.sh  upload_checkpoint_to_hub.py  validate_differentiable_memory.py
test_outputs/: run_metadata.json
tests/: conftest.py
(+304 files in other folders)
